@@ -37,6 +37,8 @@ This should allow OEM built systems to be imaged even with resizable.
 to wait for the user to unplug and replug their usb nics.
 * Update init.xz/init_32.xz to 2014.11 and update kernel infos to 3.16.1
 within the inits
+* Add multicast port override, as needed.  Add capability to specify the
+multicast address as well.
 * Add FTP enable/disable for server sizes of images.
 * Add elements to allow mass deletion of items from relevant management pages.
 * Add jquery to read log files.
